# stack-machine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/html/: annotated.html  arg-parser_8cpp.html  arg-parser_8h.html  arg-parser_8h_source.html  class_assembly_machine-members.html  class_assembly_machine.html  class_c_p_u-members.html  class_c_p_u.html  class_controller-members.html  class_controller.html  class_disassembly_buffer-members.html  class_disassembly_buffer.html  class_label_table-members.html  class_label_table.html  class_r_a_m-members.html  class_r_a_m.html  class_r_a_m_impl-members.html  class_r_a_m_impl.html  class_stack_machine-members.html  class_stack_machine.html  class_test-members.html  class_test.html  class_test_runner-members.html  class_test_runner.html  classes.html  components_8h.html  components_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_16118e255a85083d09415381158c4867.html  dir_1b5c7ae02bafc6b1c7268f6d0192eb26.html  dir_1eb4eb132a2d13955c3b2362a9d9d833.html  dir_212efe9a2e9757eefc3997d1e4dd1fc1.html  dir_22f38492abdfe5ebed74a4cc52d61b27.html  dir_3e4ca041c4d5abd9b7813e74bd61da7d.html  (+59 more)
examples/: example_1.asm  example_1.txt  example_1__disassembly.txt  example_2.asm  example_2.txt  example_2__disassembly.txt  example_3.asm  example_3.txt  example_3__disassembly.txt  example_4.asm  example_4.txt  example_4__disassembly.txt  example_5.asm  example_5.txt  example_5__disassembly.txt  example_conditional_loop_discriminant_sqrt.asm  example_conditional_loop_discriminant_sqrt.txt  example_conditional_loop_discriminant_sqrt__disassembly.txt  example_infinite_discriminant_sqrt.asm  example_infinite_discriminant_sqrt.txt  example_infinite_discriminant_sqrt__disassembly.txt  example_recursive_fibonacci.asm  example_recursive_fibonacci.txt  example_recursive_fibonacci__disassembly.txt
src/: arg-parser.cpp  arg-parser.h  main-asm.cpp  main-disasm.cpp  main-run.cpp  main.cpp  stack-machine-utils.cpp  stack-machine-utils.h  stack-machine.cpp  stack-machine.h
test/: main.cpp  stack-machine-tests.cpp  testlib.cpp  testlib.h
(+48 files in other folders)
